--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header class="header">
+        <div class="container">
         <nav class="nav">
             <ul class="list nav-list">
                 <li class="nav-item"><a href="" class="nav-link">LIFESTYLE</a></li>
@@ -23,9 +24,11 @@
                 <li class="nav-item"><a href="" class="nav-link">PHOTODEALY</a></li>
             </ul>
         </nav>
+    </div>
     </header>
     <main class="main">
         <section class="main-content">
+            <div class="container">
             <ul class="list main-content-list">
                 <li class="main-content-item">
                     <article class="main-content-box">
@@ -106,6 +109,7 @@
             </ul>
             <button type="button" class="main-content-btn">Load More</button>
         </section>
+        </div>
     </main>
 </body>
 </html>
